<resources>
    <string name="app_name">MeNTS_v4</string>
    <array name="spinner1_Pt">
        <item>Seleccione</item>
        <item>Menor a 20 (Joven)</item>
        <item>Entre 21 y 40 (Adulto joven)</item>
        <item>Entre 41 y 50 (Adulto)</item>
        <item>Entre 51 y 65 (Adulto mayor)</item>
        <item>Mayor a 65 (Anciano)</item>
    </array>
    <array name="spinner2_Pt">
        <item>Seleccione</item>
        <item>Joven (No presenta)</item>
        <item>Adulto joven (No aplica)</item>
        <item>Adulto (No aplica)</item>
        <item>Adulto mayor (Usa minimamente inhaladores)</item>
        <item>Anciano (Usa frecuentemente inhaladores)</item>
    </array>
    <array name="spinner3_Pt">
        <item>Seleccione</item>
        <item>No presenta</item>
        <item>Adulto joven (No aplica)</item>
        <item>Adulto (No aplica)</item>
        <item>Leve (sin uso de CPAP)</item>
        <item>Requiere uso de CPAP</item>
    </array>
    <array name="spinner4_Pt">
        <item>Seleccione</item>
        <item>No presenta</item>
        <item>Minima sin medicamentos</item>
        <item>Leve (1 medicamento)</item>
        <item>Moderada (2 medicamentos)</item>
        <item>Severa (3 o más medicamentos)</item>
    </array>
    <array name="spinner5_Pt">
        <item>Seleccione</item>
        <item>No presenta</item>
        <item>Adulto joven (No aplica)</item>
        <item>Leve (sin medicamentos)</item>
        <item>Moderada (medicamentos orales)</item>
        <item>Severa (uso de insulina)</item>
    </array>
    <array name="spinner6_Pt">
        <item>Seleccione</item>
        <item>No presenta</item>
        <item>Adulto joven (No aplica)</item>
        <item>Leve</item>
        <item>Moderada</item>
        <item>Severa</item>
    </array>
    <array name="spinner7_Pt">
        <item>Seleccione</item>
        <item>Asintomático</item>
        <item>Adulto joven (No aplica)</item>
        <item>Adulto (No aplica)</item>
        <item>Adulto mayor (No aplica)</item>
        <item>Sintomático</item>
    </array>
    <array name="spinner_8_Pt">
        <item>Seleccione</item>
        <item>No</item>
        <item>Probablemente no</item>
        <item>Posiblemente</item>
        <item>Probablemente si</item>
        <item>Si</item>
    </array>

    <array name="spinner2_Et">
        <item>Seleccione</item>
        <item>No disponibilidad</item>
        <item>Disponible, menor al 40% de efectividad</item>
        <item>Disponible, 40-60% efectividad</item>
        <item>Disponible, 60-95% efectividad</item>
        <item>Disponible, 100% efectividad</item>
    </array>
    <array name="spinner3_Et">
        <item>Seleccione</item>
        <item>No aplicable</item>
        <item>Inferior al manejo quirúrgico</item>
        <item>Equivalente al manejo quirúrgico</item>
        <item>Posiblemente mejor que el manejo quirúrgico</item>
        <item>Superior al manejo quirúrgico</item>
    </array>
    <array name="spinner4_Et">
        <item>Seleccione</item>
        <item>No hay impacto negativo</item>
        <item>Impacto significativamente negativo</item>
        <item>Impacto negativo</item>
        <item>Impacto moderadamente negativo</item>
        <item>Impacto minimamente negativo</item>
    </array>
    <array name="spinner5_Et">
        <item>Seleccione</item>
        <item>No hay impacto negativo</item>
        <item>Impacto significativamente negativo</item>
        <item>Impacto negativo</item>
        <item>Impacto moderadamente negativo</item>
        <item>Impacto minimamente negativo</item>
    </array>
    <array name="spinner6_Et">
        <item>Seleccione</item>
        <item>No hay impacto negativo</item>
        <item>Impacto significativamente negativo</item>
        <item>Impacto negativo</item>
        <item>Impacto moderadamente negativo</item>
        <item>Impacto minimamente negativo</item>
    </array>
    <array name="spinner7_Et">
        <item>Seleccione</item>
        <item>No hay impacto negativo</item>
        <item>Impacto significativamente negativo</item>
        <item>Impacto negativo</item>
        <item>Impacto moderadamente negativo</item>
        <item>Impacto minimamente negativo</item>
    </array>
    <string name="text_1_q_1">Tiempo estimado de procedimiento quirúrgico</string>
    <string name="text_2_q_1">Timepo de hospitalización estimado</string>
    <string name="text_3_q_1">¿Qué tan probable es que necesite UCI?</string>
    <string name="text_4_q_1">Pérdida sanguínea estimada (en cc)</string>
    <string name="text_5_q_1">Personas requeridas en quirofano</string>
    <string name="text_6_q_1">¿Qué tan probable es que necesite entubación</string>
    <string name="text_7_q_1">¿Qué tipo de cirugía se requiere?</string>
    <string name="next">Next</string>

    <array name="options_1_q_1">
        <item>Seleccione</item>
        <item>Menos de 30min</item>
        <item>Entre 31-60min</item>
        <item>Entre 61-120min</item>
        <item>Entre 121-180min</item>
        <item>Más de 180min</item>
    </array>
    <array name="options_2_q_1">
        <item>Seleccione</item>
        <item>Ambulatorio</item>
        <item>Menos de 23h</item>
        <item>Entre 24-48h</item>
        <item>Entre 2-3 días</item>
        <item>Más de 4 días</item>
    </array>
    <array name="options_3_q_1">
        <item>Seleccione</item>
        <item>Poco probable</item>
        <item>menor al 5%</item>
        <item>Entre 5-10%</item>
        <item>Entre 11-25%</item>
        <item>Mayor al 25%</item>
    </array>
    <array name="options_4_q_1">
        <item>Seleccione</item>
        <item>Menor a 100cc</item>
        <item>Entre 100-250cc</item>
        <item>Entre 250-500cc</item>
        <item>Entre 500-750cc</item>
        <item>Mayor a 751cc</item>
    </array>
    <array name="options_5_q_1">
        <item>Seleccione</item>
        <item>Una personas</item>
        <item>Dos personas</item>
        <item>Tres personas</item>
        <item>Cuatro personas</item>
        <item>Cinco personas</item>
    </array>
    <array name="options_6_q_1">
        <item>Seleccione</item>
        <item>Menor al 1%</item>
        <item>Entre el 1-5%</item>
        <item>Entre el 6-10%</item>
        <item>Entre el 11-25%</item>
        <item>Mayor al 25%</item>
    </array>
    <array name="options_7_q_1">
        <item>Seleccione</item>
        <item>Ninguno de los siguientes</item>
        <item>Cirugía Abdominopélvica poco invasiva</item>
        <item>Cirugía Abdominopélvica abierta e infraumbilical</item>
        <item>Cirugía Abdominopélvica abierta y supraumbilical</item>
        <item>Cirugía de otorrinolaringología, del tracto gastrointestinal superior ó de tórax</item>
    </array>
    <string name="action_settings">Settings</string>
    <string name="start_text_1">La calculadora MeNTS incorpora factores para realizar un juicio clínico integral con el objetivo de sopesar los riesgos individuales apegándose a la necesidad ética de optimizar los recursos para la salud publica.</string>
    <string name="start_text_2">Para encontrar su puntaje según este sistema, responda las siguientes preguntas:</string>
    <string name="button_text_1">Empezar</string>
    <string name="imagen_hospital_desc">Esta imagen contiene un hospital</string>
    <string name="imagen_fatiga_desc">Imagen de persona fatigada</string>
    <string name="paciente_imagen_desc">Imagen de paciente con un corazón en el pecho</string>
    <string name="imagen_cirugia_desc">Imagen con una sala de cirugía</string>
    <string name="text_resultado_final">El resultado de su puntaje es:</string>
    <string name="resultado_num">33</string>
    <string name="button_next_text">Sig.</string>
    <string name="text_q1_p3">Factores asociados a la enfermedad</string>
    <string name="text_q2_p3">Impacto en la enfermedad al retrasar la cirugia 2 semanas</string>
    <string name="text_q3_p3">Impacto en la dificultad quirurgica de la enfermedad al retrasar la cirugia 6 semanas</string>
    <string name="text_q4_p3">Disponibilidad del manejo no quirurgico</string>
    <string name="text_q5_p3">Efectividad del manejo no quirurgico</string>
    <string name="text_q6_p3">Impacto en la enfermedad al retrasar la cirugia 6 semanas</string>
    <string name="text_q7_p3">Impacto en la dificultad quirurgica de la enfermedad al retrasar la cirugia 2 semanas</string>
    <string name="text_q1_p2">Factores asociados al paciente</string>
    <string name="text_q2_p2">Edad del paciente</string>
    <string name="text_q3_p2">Enfermedad Similar Tipo Influenza</string>
    <string name="text_q4_p2">Enfermedad Pulmonar</string>
    <string name="text_q5_p2">Apnea Obstructiva del Sueño</string>
    <string name="text_q6_p2">Enfermedad Cardiovascular</string>
    <string name="text_q7_p2">Diabetes</string>
    <string name="text_q8_p2">Inmunocompromiso</string>
    <string name="text_q9_p2">¿Ha tenido exposición a pacientes COVID 19 positivos en los últimos 14 días?</string>
    <string name="options_7_q_1">Factores asociados al procedimiento</string>
    <string name="text_q10_p2">Enfermedades asociadas</string>
    <string name="text_button_final">Empezar de nuevo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="todoEn">TODOEN</string>
    <string name="todoPr">TODOPR</string>
    <string name="todoPa">TODOPA</string>
    <string name="todopoF">TODOPOF</string>
    <string name="todoPaf">TODOPAF</string>
    <string name="todoEnf">TODOENF</string>
    <string name="todoImgfi">TODOIMGFi</string>
</resources>