<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#673AB7"
    android:backgroundTint="#673AB7"
    android:foregroundTint="#673AB7"
    tools:context=".vresultado">

    <TextView
        android:id="@+id/text_resultado_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_resultado_final"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />

    <TextView
        android:id="@+id/textview_first_paciente"
        android:layout_width="59dp"
        android:layout_height="50dp"
        android:text="@string/resultado_num"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.452" />

    <Button
        android:id="@+id/button_vresultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_button_final"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="418dp"
        android:layout_height="228dp"
        android:background="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:foregroundTint="#673AB7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="125dp"
            android:layout_height="111dp"
            android:contentDescription="@string/todopoF"
            android:src="@drawable/surgeon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.056"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.503" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="125dp"
            android:layout_height="118dp"
            android:contentDescription="@string/todoPaf"
            android:src="@drawable/patient"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="127dp"
            android:layout_height="112dp"
            android:contentDescription="@string/todoEnf"
            android:src="@drawable/fatigue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.944"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.52" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="327dp"
        android:layout_height="253dp"
        android:src="@drawable/hospital"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.748"
        android:contentDescription="@string/todoImgfi" />

</androidx.constraintlayout.widget.ConstraintLayout>